<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/accedi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <android.widget.ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.TextView
        android:id="@+id/label_email"
        style="@style/style_Label"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <android.widget.EditText
        android:id="@+id/edit_email"
        style="@style/style_EditText"
        android:hint="@string/inserisci_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_email" />

    <android.widget.TextView
        android:id="@+id/label_pw"
        style="@style/style_Label"
        android:text="@string/pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <android.widget.EditText
        android:id="@+id/edit_pw"
        style="@style/style_EditText"
        android:hint="@string/inserisci_pw"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_pw" />

    <android.widget.GridLayout
        android:id="@+id/grid_doppio_button"
        style="@style/style_layout_doppio_button"
        android:layout_marginTop="10dp"
        android:columnCount="2"

        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pw">

        <android.widget.Button
            style="@style/style_Button.blue"
            android:id="@+id/registrati_button"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/registrati" />

        <android.widget.Button
            style="@style/style_Button.green"
            android:id="@+id/accedi_button"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:text="@string/entra" />

    </android.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>