<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.docdoc.viewmodel.PrenotazioneViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto" >

        <android.widget.TextView
            android:id="@+id/label_nome"
            style="@style/style_Label"
            android:text="@string/nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.EditText
            android:id="@+id/edit_nome"
            style="@style/style_EditText"
            android:text="@={viewModel.prenotazione.nomePaziente}"
            android:hint="@string/inserisci_nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_nome" />

        <android.widget.TextView
            android:id="@+id/label_cognome"
            style="@style/style_Label"
            android:text="@string/cognome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nome" />

        <android.widget.EditText
            android:id="@+id/edit_cognome"
            style="@style/style_EditText"
            android:text="@={viewModel.prenotazione.cognomePaziente}"
            android:hint="@string/inserisci_cognome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_cognome" />

        <android.widget.TextView
            android:id="@+id/label_data"
            style="@style/style_Label"
            android:text="@string/data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_cognome" />

        <android.widget.Button
            style="@style/style_Button.aggiungiEvento"
            android:id="@+id/button_editData"
            android:text="@={viewModel.prenotazione.data}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_data"
            android:hint="@string/seleziona_data"
            android:textColor="@color/black70"
            android:drawableStart="@drawable/ic_date" />

        <android.widget.TextView
            android:id="@+id/label_ora"
            style="@style/style_Label"
            android:text="@string/ora"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_editData" />

        <android.widget.Button
            style="@style/style_Button.aggiungiEvento"
            android:id="@+id/button_editOra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_ora"
            android:text="@={viewModel.prenotazione.orario}"
            android:hint="@string/seleziona_ora"
            android:textColor="@color/black70"
            android:drawableStart="@drawable/ic_ora" />

        <android.widget.TextView
            android:id="@+id/label_descrizione"
            style="@style/style_Label"
            android:text="@string/descrizione"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_editOra" />

        <android.widget.EditText
            android:id="@+id/edit_descrizione"
            style="@style/style_EditText"
            android:singleLine="false"
            android:layout_height="wrap_content"
            android:text="@={viewModel.prenotazione.descrizione}"
            android:hint="@string/inserisci_descrizione"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_descrizione" />

        <android.widget.GridLayout
            style="@style/style_layout_doppio_button"
            android:id="@+id/grid_doppio_button"
            android:columnCount="2"
            android:rowCount="1"

            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_descrizione">

            <android.widget.Button
                android:id="@+id/button_indietro"
                style="@style/style_Button.blue"
                android:text="@string/indietro"
                android:layout_column="0"
                android:layout_row="0"/>

            <android.widget.Button
                android:id="@+id/button_continua"
                style="@style/style_Button.green"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="20dp"
                android:text="@string/continua" />

        </android.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>