<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_prenotazione"
        android:title="@string/prenota"
        android:icon="@drawable/ic_aggiungi"/>
    <item
        android:id="@+id/prenotazioni"
        android:title="@string/prenotazioni"
        android:icon="@drawable/ic_list"/>
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/profilo"
        android:title="@string/Profilo"
        android:icon="@drawable/ic_profilo"/>
</menu>